fix body scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,3 +33,7 @@ body {
 #root {
   width: 100%;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
